service-specific-mTLS.yml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: caller-api-pa
  namespace: default
spec:
  selector:
    matchLabels:
      app: caller-api
  mtls:
    mode: STRICT
