library-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: library-api
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: library-api
  template:
    metadata:
      labels:
        app: library-api
    spec:
      containers:
      - name: library-api
        image: localhost:32000/library-api:1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9200
