app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-crud-deployment
spec:
  selector:
    matchLabels:
      app: springboot-k8s-mysql
  replicas: 1
  template:
    metadata:
      labels:
        app: springboot-k8s-mysql
    spec:
      containers:
        - name: springboot-crud-k8s
          image: spring-boot-k8s:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8081
          env:   # Setting Enviornmental Variables
            - name: DB_HOST   # Setting Database host address from configMap
              valueFrom:
                configMapKeyRef:
                  name: db-config
                  key: host

            - name: DB_NAME  # Setting Database name from configMap
              valueFrom:
                configMapKeyRef:
                  name: db-config
                  key :  dbName

            - name: MYSQL_USERNAME  # Setting Database username from Secret
              valueFrom :
                secretKeyRef :
                  name : mysql-secrets
                  key :  username

            - name: MYSQL_PASSWORD # Setting Database password from Secret
              valueFrom :
                secretKeyRef :
                  name : mysql-secrets
                  key :  password
          resources:
            requests:
              cpu: 500m
              memory: 1000Mi
            limits:
              memory: "1Gi"
              cpu: "800m"

---
apiVersion: v1
kind: Service
metadata:
  name: springboot-crud-svc
spec:
  selector:
    app: springboot-k8s-mysql
  ports:
  - port: 8080
    targetPort: 8082
  type: NodePort
# ---
# apiVersion: v1 # Kubernetes API version
# kind: Service # Kubernetes resource kind we are creating
# metadata: # Metadata of the resource kind we are creating
#   name: springboot-crud-svc
# spec:
#   selector:
#     app: springboot-k8s-mysql
#   ports:
#     port: 8080 # The port that the service is running on in the cluster
#     targetPort: 8082 # The port exposed by the service
#   type: NodePort # type of the service.
