node-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  node-backend
  namespace: backend
  labels:
    app:  node-backend
spec:
  selector:
    matchLabels:
      app: node-backend
      tier: backend
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  node-backend
    spec: 
      containers:
      - name:  node-backend
        image:  node-backend:v1.0.0
        imagePullPolicy: ifNotPresent 
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 200m
            memory: 200Mi
        ports:
        - containerPort: 9100
          name:  node-backend
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: node-backend-service
  namespace: backend
spec:
  selector:
    app: node-backend
    tier: backend
  type: NodePort
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: node-backend
    protocol: TCP
    port: 9100
    targetPort: 9100
