svc.yml
apiVersion: v1
kind: Service
metadata:
  name: redolf-app-deploy
spec:
  selector:
    app: myapp
  ports:
  - port: 9090
    targetPort: 9091
