inventory-istio.yml


apiVersion: v1
kind: Service
metadata:
  name: inventory-api
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: inventory-api

---

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: inventory-gateway
spec:
  selector:
    istio: ingressgateway   # use Istio’s ingress gateway pod
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: inventory-route
spec:
  hosts:
  - "*"
  gateways:
  - inventory-gateway
  http:
  - match:
    - uri:
        prefix: /inventory
    route:
    - destination:
        host: inventory-api
        port:
          number: 80
